# iris_scanalysis

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml
notebooks/: dev_pipeline.ipynb
src/iris_scanalysis/: __init__.py  io.py  qc.py  utils.py  vis.py
src/scrnax/: __init__.py  pp.py  tl.py
tests/: conftest.py  test_io.py  test_pp.py  test_qc.py  test_tl.py
tests/data/: tiny_counts_and_meta.npz
