[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrnax"
version = "0.0.1"
description = "Lightweight, opinionated scRNA-seq analysis workflow built on scanpy"
readme = "README.md"
authors = [
    {name = "YOUR_NAME_HERE", email = "YOUR_EMAIL_HERE"}
]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "anndata>=0.10,<0.12",
    "scanpy>=1.10,<1.12",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "scipy>=1.13,<2",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "black>=24",
    "pre-commit>=4",
    "ipykernel>=6",
    "jupyterlab>=4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scrnax = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
